--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.devopsclass</groupId>
   <artifactId>quickstart</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <package>war</package>
 
   <name>quickstart</name>
   <!-- FIXME change it to the project's website -->
